--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-/Node.js/iot_web/node_modules
-/Node.js/iot_web/package-lock.json
-/Django/iot_web/my_iot/__pycache__
-/Django/iot_web/iot_web/__pycache__/*.pyc
-/Django/iot_web/my_iot/migrations
+__pycache__
+*.pyc
+migrations
+node_modules
+package-lock.json
+*.iml
+.gradle
+local.properties
+.DS_Store
+captures
+.externalNativeBuild
+.idea
+build
